@@ -1,3 +1,9 @@
+2006-Nov-28  Heikki Junnila <hjunnila@users.sf.net>
+	* Fixed a bug in pluginmanager.cpp that tried to give an integer
+	  to a function that actually takes a QString. Since newer QT versions
+	  contain a QString implementation that accepts also integers, this
+	  isn't a problem to them. Rather, it's a problem to older QT's
+
 2006-Nov-26  Heikki Junnila <hjunnila@users.sf.net>
 	* CVS didn't add files under etc/... Fixed...
 
